3265 - Fix ODP Comment review indicator alignment & add back description grid-row-gap

--- a/src/client/pages/Section/Descriptions/CommentableDescription/Description.scss
+++ b/src/client/pages/Section/Descriptions/CommentableDescription/Description.scss
@@ -1,5 +1,9 @@
 @import 'src/client/style/partials';
 
+.description {
+  grid-row-gap: $spacing-xxxxs;
+}
+
 .description__editor-container:not(.editable) {
   div.editorWYSIWYG:not(.validation-error) {
     div.jodit-wysiwyg {
